force-app/main/default/objects/SRM_CRM_Sprint__c/SRM_CRM_Sprint__c.object-meta.xml
<CustomObject>
    <label>CRM Sprint</label>
    <nameField>
        <label>CRM Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRM Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>