force-app/main/default/objects/SRM_CRM_Sprint__c/fields/Number_of_Tickets_Deployed_to_Integratio__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tickets_Deployed_to_Integratio__c</fullName>
    <label>Num. of Tickets Deployed to Integration</label>
    <summaryFilterItems>
        <field>SRM_Jira_Ticket__c.Deployed_to_Integration_Environment__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SRM_Jira_Ticket__c.CRM_Sprint__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>