force-app/main/default/objects/SRM_CRM_Sprint__c/fields/Total_Level_of_Effort_hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Level_of_Effort_hours__c</fullName>
    <label>Total Level of Effort (hours)</label>
    <summarizedField>SRM_Jira_Ticket__c.Level_of_Effort_hours__c</summarizedField>
    <summaryForeignKey>SRM_Jira_Ticket__c.CRM_Sprint__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>