force-app/main/default/objects/SRM_CRM_Sprint__c/fields/Total_Metadata_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Metadata_Members__c</fullName>
    <label>Total Metadata Members</label>
    <summarizedField>SRM_Jira_Ticket__c.Total_Metadata_Members__c</summarizedField>
    <summaryForeignKey>SRM_Jira_Ticket__c.CRM_Sprint__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>