force-app/main/default/objects/SRM_CRM_Sprint__c/fields/Total_Number_of_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Tickets__c</fullName>
    <label>Total Number of Tickets</label>
    <summaryForeignKey>SRM_Jira_Ticket__c.CRM_Sprint__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>