force-app/main/default/objects/SRM_CRM_Sprint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Number_of_Tickets__c</columns>
    <columns>Total_Metadata_Members__c</columns>
    <columns>Number_of_Tickets_Deployed_to_Integratio__c</columns>
    <columns>Total_Level_of_Effort_hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>